[gd_scene load_steps=2 format=3 uid="uid://dnkgxsg07vn30"]

[ext_resource type="Script" uid="uid://dva1dp6ap3da4" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_06t4h")

[node name="TitleLabel" type="Label" parent="."]
offset_left = 1.0
offset_top = 181.0
offset_right = 1147.0
offset_bottom = 204.0
text = "2d Platformer"
horizontal_alignment = 1

[node name="Options" type="VFlowContainer" parent="."]
offset_left = 501.0
offset_top = 265.0
offset_right = 643.0
offset_bottom = 374.0

[node name="StartButton" type="Button" parent="Options"]
layout_mode = 2
text = "Start
"

[node name="Fullscreen" type="Button" parent="Options"]
layout_mode = 2
text = "Toggle Fullscreen"

[node name="Quitbutton" type="Button" parent="Options"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Options/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Options/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Options/Quitbutton" to="." method="_on_quitbutton_pressed"]
